@startuml

title __DATAFINDER's Class Diagram__\n

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        abstract class TFA.modelo.datafinder.DataFetcherStrategy {
            ~ TOKEN : String
            ~ apiApiSportsUrl : String
            ~ request : HttpRequest
            + executeRequest()
            {abstract} + setRequest()
            # getSeasonYear()
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyContext {
            + executeRequest()
            + setStrategy()
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyPlayer {
            ~ playerId : String
            ~ playerUrl : String
            + StrategyPlayer()
            + setRequest()
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyTeam {
            ~ teamId : String
            ~ teamUrl : String
            + StrategyTeam()
            + StrategyTeam()
            + setRequest()
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyTeamPlayers {
            ~ playerUrl : String
            ~ season : String
            ~ teamId : String
            + StrategyTeamPlayers()
            + setRequest()
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyTeamStandings {
            ~ league : String
            ~ season : String
            ~ standingUrl : String
            ~ teamId : String
            + StrategyTeamStandings()
            + setRequest()
        }
      }
    }
  }
  

  namespace TFA {
    namespace modelo {
      namespace datafinder {
        class TFA.modelo.datafinder.StrategyTeamStats {
            ~ season : String
            ~ teamId : String
            ~ teamStatsUrl : String
            + StrategyTeamStats()
            + setRequest()
        }
      }
    }
  }
  

  TFA.modelo.datafinder.StrategyContext o-- TFA.modelo.datafinder.DataFetcherStrategy : strategy
  TFA.modelo.datafinder.StrategyPlayer -up-|> TFA.modelo.datafinder.DataFetcherStrategy
  TFA.modelo.datafinder.StrategyTeam -up-|> TFA.modelo.datafinder.DataFetcherStrategy
  TFA.modelo.datafinder.StrategyTeamPlayers -up-|> TFA.modelo.datafinder.DataFetcherStrategy
  TFA.modelo.datafinder.StrategyTeamStandings -up-|> TFA.modelo.datafinder.DataFetcherStrategy
  TFA.modelo.datafinder.StrategyTeamStats -up-|> TFA.modelo.datafinder.DataFetcherStrategy


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
